WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191737
REGRESSION(
r237467
) [PSON] iOS: Going back to a page sometimes doesn't restore the full page
https://bugs.webkit.org/show_bug.cgi?id=191737
Summary
REGRESSION(r237467) [PSON] iOS: Going back to a page sometimes doesn't restor...
Ryosuke Niwa
Reported
2018-11-15 21:55:59 PST
11/9/18, 12:56 PM Michael Saboff: Steps to reproduce: 1) Go to drudgereport.com 2) Click on link (the link should replace the contents of the page) 3) Scroll the new page 4) Go back to drudgereport.com About half the time, the page doesn’t completely paint. I disabled PSON and couldn’t reproduce after trying a couple of times. <
rdar://problem/45953358
>
Attachments
patch
(1.62 KB, patch)
2018-11-16 09:13 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-11-16 09:13:14 PST
Created
attachment 355063
[details]
patch
Simon Fraser (smfr)
Comment 2
2018-11-16 09:13:47 PST
Comment on
attachment 355063
[details]
patch Is this testable?
Chris Dumez
Comment 3
2018-11-16 09:16:15 PST
Comment on
attachment 355063
[details]
patch LGTM too
Antti Koivisto
Comment 4
2018-11-16 09:16:52 PST
> Is this testable?
I don't think so without significant effort. Would be good though, these things are very fragile.
WebKit Commit Bot
Comment 5
2018-11-16 09:51:19 PST
Comment on
attachment 355063
[details]
patch Clearing flags on attachment: 355063 Committed
r238286
: <
https://trac.webkit.org/changeset/238286
>
WebKit Commit Bot
Comment 6
2018-11-16 09:51:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-11-16 09:53:46 PST
<
rdar://problem/46129899
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug